fixed image on media page on tablet

--- a/scss/media.scss
+++ b/scss/media.scss
@@ -86,6 +86,32 @@ header {
         }
     }
 
+    @media only screen and (max-width: 992px) {
+        &-marketing {
+            padding-left: 0;
+
+            #media-newsletter {
+                max-width: 100% !important;
+                border-right: none !important;
+
+                .media-lead {
+                    border-bottom: none !important;
+                }
+
+                #mc-embedded-subscribe {
+                    margin: 0 !important;
+                }
+
+                .headshot-logo {
+                    width: 9em;
+                    border-radius: 10%;
+                    margin-right: 0px !important;
+                    margin-bottom: 1em;
+                }
+            }
+        }
+    }
+
     @media only screen and (max-width: 600px) {
         &-marketing {
             padding-left: 0;
